add time to venue from hotels

--- a/app/index.html
+++ b/app/index.html
@@ -114,7 +114,7 @@
 			</a>
 			<a href="http://www.broadwaybarn.com/" target="_blank" class="hotel_image">
 				<img src="img/hotel-3.jpg" alt="The Talbot Hotel">
-				<p>Broadway barns</p>
+				<p>Broadway barns | 10 mins</p>
 			</a>
 			<a href="http://www.premierinn.com/gb/en/hotels/england/surrey/guildford/guildford-north-a3.html" target="_blank" class="hotel_image">
 				<img src="img/hotel-4.jpg" alt="The Talbot Hotel">
